--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -15,3 +15,12 @@
 licenses(["notice"])
 
 exports_files(["LICENSE"])
+
+platform(
+	name = "x64_windows-clang-cl",
+	constraint_values = [
+		"@platforms//cpu:x86_64",
+		"@platforms//os:windows",
+		"@bazel_tools//tools/cpp:clang-cl",
+	],
+)
